# jobsearch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
agents/resume_builder/: agent.py  meta.json  resume.md  resume_state.py  section_builder.py
configs/: __init__.py  inputs.json  inputs.py  li_doms.json
models/: opportunity.py
report/: clusters.json
services/: auth.py  debug_observer.py  generator.py  human_actions.py  jd_clustering.py  jd_extractor.py  main.py  observer.py  opportunities_report.py  playwright_runtime.py  source_config.py
ui/: application_state.py  applications.py  constants.py  extraction_config.py  jd_extraction.py  main.py  spinners.py  utils.py
utils/: __init__.py  logger.py
