[project]
name = "jobsearch"
version = "0.1.0"
description = "This is a job search and application studio created for candidates to discover opportunities, understand their patterns and prepare their own profiles to apply for those opportunities"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "en-core-web-sm",
    "humanize==4.15.0",
    "litellm==1.83.0",
    "nicegui==3.10.0",
    "playwright==1.58.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "reportlab==4.4.10",
    "scikit-learn==1.7.2",
    "spacy==3.8.13",
    "structlog==25.5.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
